# mps-state-preparation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
docs/: conf.py  example.ipynb  index.rst
src/mpsprep/: __init__.py  helpers.py  mpsstatepreparation.py
tests/: gate_unitary.pkl  test_helpers.py  test_mpsprep.py  unitaries.pkl  unitaries_full.pkl
